[gd_scene load_steps=30 format=3 uid="uid://1vep8f6qs2mj"]

[ext_resource type="Script" path="res://Scripts/resturant_scene.gd" id="1_h06ge"]
[ext_resource type="Texture2D" uid="uid://dxin0tjdcudfx" path="res://Backgrounds/Resturant.png" id="1_jp6o6"]
[ext_resource type="Texture2D" uid="uid://chk0i7afmu8ua" path="res://Sprites/arrow_out.png" id="2_pw2b4"]
[ext_resource type="Texture2D" uid="uid://brtwu6hkeedqs" path="res://Sprites/foreground_wenny's.png" id="3_3y3ti"]
[ext_resource type="StyleBox" uid="uid://tfxor3sldgtf" path="res://StyleBoxes/order_entry.tres" id="4_78oem"]
[ext_resource type="FontFile" uid="uid://v3swnsgchgpo" path="res://Font/BebasNeue-Regular.ttf" id="4_ijstd"]
[ext_resource type="Texture2D" uid="uid://dk0650lh3wlih" path="res://Sprites/bag.png" id="5_ey4wu"]
[ext_resource type="FontFile" uid="uid://gs5irb036wet" path="res://Font/RobotoMono-VariableFont_wght.ttf" id="8_6glee"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mp11k"]
texture = ExtResource("2_pw2b4")
modulate_color = Color(1, 1, 0.992157, 0.513726)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_smy1w"]
texture = ExtResource("2_pw2b4")
modulate_color = Color(1, 1, 0.97, 0.905882)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0oljy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qu4y1"]

[sub_resource type="FontVariation" id="FontVariation_2abjl"]
base_font = ExtResource("4_ijstd")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q06sy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uwhg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_byjcd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qd7uu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qfcrg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jdnm3"]
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0
bg_color = Color(0.223529, 0.219608, 0.258824, 0.717647)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mw68g"]
texture = ExtResource("5_ey4wu")
modulate_color = Color(0.886262, 0.886261, 0.886262, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50xai"]
texture = ExtResource("5_ey4wu")
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fs73b"]
texture = ExtResource("5_ey4wu")
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="FontVariation" id="FontVariation_a3tv1"]
base_font = ExtResource("8_6glee")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmf5c"]
bg_color = Color(0.93408, 0.93408, 0.93408, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0901961, 0.0901961, 0.0901961, 0.596078)
border_blend = true
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43r0x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ec1d4"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 0.305882)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_swdb4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4p0k7"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.331444, 0.326271, 0.378462, 0.717647)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nbobf"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 2.0
bg_color = Color(0.415686, 0.407843, 0.458824, 0.717647)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.478431)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Resturant_Scene" type="Node2D"]
script = ExtResource("1_h06ge")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-28, 0)
scale = Vector2(1.02188, 1.01111)
texture = ExtResource("1_jp6o6")
centered = false

[node name="Foreground" type="Sprite2D" parent="."]
position = Vector2(-28, 0)
scale = Vector2(1.02188, 1.01111)
texture = ExtResource("3_3y3ti")
centered = false

[node name="Exit" type="Button" parent="."]
offset_left = 467.0
offset_top = 584.0
offset_right = 813.0
offset_bottom = 711.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_mp11k")
theme_override_styles/hover = SubResource("StyleBoxTexture_smy1w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0oljy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qu4y1")

[node name="Request_Order" type="Button" parent="."]
offset_left = 612.0
offset_top = 282.0
offset_right = 812.0
offset_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 10
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_2abjl")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_q06sy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8uwhg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_byjcd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_qd7uu")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qfcrg")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 1310.0
offset_top = 266.0
offset_right = 1529.0
offset_bottom = 344.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jdnm3")

[node name="speech" type="Label" parent="."]
offset_left = 260.0
offset_top = 254.0
offset_right = 780.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Uhhh.. no.. it's correct. Look again..."
horizontal_alignment = 2
autowrap_mode = 1

[node name="Bag" type="Button" parent="."]
visible = false
offset_left = 480.0
offset_top = 315.0
offset_right = 560.0
offset_bottom = 425.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_mw68g")
theme_override_styles/hover = SubResource("StyleBoxTexture_50xai")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fs73b")

[node name="Receipt" type="Label" parent="."]
visible = false
offset_left = 341.0
offset_top = 363.0
offset_right = 509.0
offset_bottom = 515.0
rotation = -0.181514
scale = Vector2(0.14, 0.21)
pivot_offset = Vector2(206, -17)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.607843, 0.607843, 0.607843, 0.247059)
theme_override_colors/font_outline_color = Color(0.370364, 0.370364, 0.370364, 1)
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
theme_override_constants/line_spacing = -2
theme_override_fonts/font = SubResource("FontVariation_a3tv1")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxFlat_wmf5c")
text = "--Taco Town--
Order #1

John Preston

1234 W. Sycamore St.fghfghfghfgh"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Check_Bag" type="Button" parent="Receipt"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 168.0
offset_bottom = 154.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_43r0x")
theme_override_styles/hover = SubResource("StyleBoxFlat_ec1d4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ec1d4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_43r0x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_swdb4")

[node name="Wrong_Order" type="Button" parent="Receipt"]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 128.0
offset_right = 165.0
offset_bottom = 153.0
scale = Vector2(0.766428, 0.766428)
focus_mode = 0
theme_override_styles/normal = ExtResource("4_78oem")
theme_override_styles/hover = SubResource("StyleBoxFlat_4p0k7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nbobf")
toggle_mode = true
text = " Wrong Order?"

[node name="Check" type="Label" parent="."]
offset_left = 468.0
offset_top = 283.0
offset_right = 577.0
offset_bottom = 311.0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[connection signal="pressed" from="Exit" to="." method="_on_exit_arrow_pressed"]
[connection signal="mouse_entered" from="Request_Order" to="." method="_on_request_order_mouse_entered"]
[connection signal="mouse_exited" from="Request_Order" to="." method="_on_request_order_mouse_exited"]
[connection signal="pressed" from="Request_Order" to="." method="_get_order"]
[connection signal="mouse_entered" from="Bag" to="." method="_on_bag_mouse_entered"]
[connection signal="mouse_exited" from="Bag" to="." method="_on_bag_mouse_exited"]
[connection signal="pressed" from="Bag" to="." method="_on_take_bag"]
